--- a/src/REstate.Web.Core/Schemas.resx
+++ b/src/REstate.Web.Core/Schemas.resx
@@ -120,20 +120,26 @@
   <data name="Machine" xml:space="preserve">
     <value>{
   "$schema": "http://json-schema.org/draft-04/schema#",
-  "id": "{host}/machine",
+  "id": "http://localhost/restate/machine",
   "type": "object",
+  "name": "Machine",
+  "title": "Machine",
   "properties": {
     "machineName": {
-      "id": "{host}/machine/name",
-      "type": "string"
+      "id": "http://localhost/restate/machine/name",
+      "type": "string",
+      "name": "Name",
+      "title": "Name"
     },
     "triggers": {
-      "id": "{host}/machine/triggers",
+      "id": "http://localhost/restate/machine/triggers",
       "type": "array",
+      "title": "Triggers",
       "items": {
         "type": "object",
+        "name": "Trigger",
         "properties": {},
-        "$ref": "{host}/trigger"
+        "$ref": "http://localhost/restate/trigger"
       }
     }
   },
@@ -149,6 +155,8 @@
   "id": "{host}/trigger",
   "type": "object",
   "additionalProperties": false,
+  "name": "Trigger",
+  "title": "Trigger",
   "properties": {
     "triggerName": {
       "id": "{host}/trigger/name",
