Changes to routing and styling

--- a/src/REstate.Web.Core/Schemas.resx
+++ b/src/REstate.Web.Core/Schemas.resx
@@ -194,7 +194,8 @@
       "id": "{host}/state/parent-state-name",
       "type": "string",
       "name": "Parent State Name",
-      "title": "Parent State Name"
+      "title": "Parent State Name",
+      "format": "date"
     }
   },
   "required": [
