--- a/src/REstate.Web.Core/Schemas.resx
+++ b/src/REstate.Web.Core/Schemas.resx
@@ -117,59 +117,342 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Code" xml:space="preserve">
+    <value>{
+    "$schema": "http://json-schema.org/draft-04/schema#",
+    "id": "http://localhost/restate/code",
+    "type": "object",
+    "name": "OnExitAction",
+    "title": "On Exit Action",
+    "default": null,
+    "format": "normal",
+    "options": {
+        "disable_edit_json": true
+    },
+    "additionalProperties": false,
+    "defaultProperties": [
+        "name",
+        "connectorKey",
+        "body",
+        "description"
+    ],
+    "properties": {
+        "name": {
+            "id": "http://localhost/restate/code/name",
+            "type": "string",
+            "name": "Name",
+            "title": "Name",
+            "default": null
+        },
+        "connectorKey": {
+            "id": "http://localhost/restate/code/connector-key",
+            "type": "string",
+            "name": "ConnectorKey",
+            "title": "Connector Key",
+            "default": null
+        },
+        "body": {
+            "id": "http://localhost/restate/code/body",
+            "type": "string",
+            "name": "Body",
+            "title": "Body",
+            "format": "code",
+            "options": {
+                "input_height": "100px",
+                "format": "text"
+            }
+        },
+        "options": {
+            "id": "http://localhost/restate/code/options",
+            "type": "object",
+            "name": "Options",
+            "title": "Options",
+            "default": null
+        },
+        "description": {
+            "id": "http://localhost/restate/code/description",
+            "type": "string",
+            "name": "Description",
+            "title": "Description",
+            "format": "textarea",
+            "default": null,
+            "options": {
+                "input_height": "100px"
+            }
+        }
+    },
+    "required": [
+        "name",
+        "connectorKey",
+        "body"
+    ]
+}</value>
+  </data>
   <data name="Machine" xml:space="preserve">
     <value>{
-  "$schema": "http://json-schema.org/draft-04/schema#",
-  "id": "{host}/machine",
-  "type": "object",
-  "name": "Machine",
-  "title": "Machine",
-  "required": [
-    "machineName",
-    "triggers"
-  ],
-  "properties": {
-    "machineName": {
-      "id": "{host}/machine/name",
-      "type": "string",
-      "name": "Name",
-      "title": "Name"
+    "$schema": "http://json-schema.org/draft-04/schema#",
+    "id": "http://localhost/restate/machine",
+    "type": "object",
+    "name": "Machine",
+    "title": "Machine Definition",
+    "required": [
+        "machineName",
+        "initialState",
+        "autoIgnoreTriggers",
+        "stateConfigurations"
+    ],
+    "additionalProperties": false,
+    "options": {
+        "disable_properties": true
     },
-    "stateConfigurations": {
-      "id": "{host}/machine/state-configurations",
-      "type": "array",
-      "title": "State Configurations",
-      "items": {
-        "type": "object",
-        "name": "State Configuration",
-        "title": "State Configuration",
-        "headerTemplate": "{{ self.state.stateName }}",
-        "minItems": 1,
-        "properties": {
-          "state": {
-            "id": "{host}/machine/state-configurations/state",
-            "type": "object",
-            "name": "State",
-            "title": "State",
-            "$ref": "{host}/state"
-          }
+    "properties": {
+        "machineName": {
+            "id": "http://localhost/restate/machine/name",
+            "type": "string",
+            "name": "MachineName",
+            "title": "Machine Name",
+            "default": null
         },
-        "required": [ "state" ]
-      }
-    },
-    "triggers": {
-        "id": "{host}/machine/triggers",
-        "type": "array",
-        "title": "Triggers",
-        "items": {
-        "headerTemplate": "{{ self.triggerName }}",
-        "type": "object",
-        "name": "Trigger",
-        "$ref": "{host}/trigger"
+        "initialState": {
+            "id": "http://localhost/restate/machine/initial-state",
+            "type": "string",
+            "name": "InitialState",
+            "title": "Initial State Name",
+            "default": null
+        },
+        "autoIgnoreTriggers": {
+            "id": "http://localhost/restate/machine/auto-ignore-triggers",
+            "type": "boolean",
+            "name": "AutoIgnoreTriggers",
+            "title": "Auto ignore triggers not defined in a transition?",
+            "default": false
+        },
+        "stateConfigurations": {
+            "id": "http://localhost/restate/machine/state-configurations",
+            "type": "array",
+            "title": "States",
+            "items": {
+                "id": "http://localhost/restate/machine/state-configurations/state",
+                "type": "object",
+                "name": "State",
+                "title": "State",
+                "headerTemplate": "{{ self.stateName }}",
+                "minItems": 1,
+                "format": "grid",
+                "additionalProperties": false,
+                "defaultProperties": [
+                    "stateName",
+                    "parentStateName",
+                    "stateDescription",
+                    "transitions"
+                ],
+                "options": {
+                    "disable_edit_json": true
+                },
+                "properties": {
+                    "stateName": {
+                        "id": "http://localhost/restate/state-configurations/state/name",
+                        "type": "string",
+                        "name": "Name",
+                        "title": "Name",
+                        "default": null
+                    },
+                    "parentStateName": {
+                        "id": "http://localhost/restate/state-configurations/state/parent-name",
+                        "type": "string",
+                        "name": "ParentStateName",
+                        "title": "Parent State Name",
+                        "default": null,
+                        "propertyOrder": 1001
+                    },
+                    "stateDescription": {
+                        "id": "http://localhost/restate/state-configurations/state/description",
+                        "type": "string",
+                        "name": "Description",
+                        "title": "Description",
+                        "format": "textarea",
+                        "default": null,
+                        "options": {
+                            "input_height": "100px"
+                        },
+                        "propertyOrder": 1002
+                    },
+                    "onEntry": {
+                        "id": "http://localhost/restate/state-configurations/state/on-entry",
+                        "type": "object",
+                        "name": "OnEntryAction",
+                        "title": "On Entry",
+                        "$ref": "http://localhost/restate/code",
+                        "propertyOrder": 1003
+                    },
+                    "onEntryFrom": {
+                        "id": "http://localhost/restate/state-configurations/state/on-entry-from-actions",
+                        "type": "array",
+                        "name": "OnEntryFromTriggers",
+                        "title": "On Entry From Triggers",
+                        "propertyOrder": 1004,
+                        "items": {
+                            "id": "http://localhost/restate/state-configurations/state/on-entry-from-actions/on-entry-from",
+                            "type": "object",
+                            "name": "OnEntryFrom",
+                            "title": "On Entry From Trigger",
+                            "headerTemplate": "On Entry From {{self.fromTrigger}}",
+                            "$ref": "http://localhost/restate/on-entry-from"
+                        }
+                    },
+                    "transitions": {
+                        "id": "http://localhost/restate/state-configurations/state/transitions",
+                        "type": "array",
+                        "name": "Transitions",
+                        "title": "Transitions",
+                        "propertyOrder": 1005,
+                        "items": {
+                            "id": "http://localhost/restate/state-configurations/state/transitions/transition",
+                            "type": "object",
+                            "name": "Transition",
+                            "title": "Transition",
+                            "format": "grid",
+                            "headerTemplate": "{{ self.triggerName }} -&gt; {{ self.resultantStateName }}",
+                            "additionalProperties": false,
+                            "defaultProperties": [
+                                "triggerName",
+                                "resultantStateName"
+                            ],
+                            "options": {
+                                "disable_edit_json": true
+                            },
+                            "properties": {
+                                "triggerName": {
+                                    "id": "http://localhost/restate/state-configurations/state/transitions/transition/trigger-name",
+                                    "type": "string",
+                                    "name": "TriggerName",
+                                    "title": "Trigger Name"
+                                },
+                                "resultantStateName": {
+                                    "id": "http://localhost/restate/state-configurations/state/transitions/transition/resultant-state-name",
+                                    "type": "string",
+                                    "name": "ResultantStateName",
+                                    "title": "Resultant State Name"
+                                },
+                                "guard": {
+                                    "id": "http://localhost/restate/state-configurations/state/transitions/transition/guard",
+                                    "type": "object",
+                                    "name": "Guard",
+                                    "title": "Guard",
+                                    "$ref": "http://localhost/restate/code",
+                                    "propertyOrder": 1002
+                                }
+                            }
+                        }
+                    },
+                    "ignoreRules": {
+                        "id": "http://localhost/restate/state-configurations/state/ignore-rules",
+                        "type": "array",
+                        "name": "IgnoreRules",
+                        "title": "Ignored Triggers",
+                        "propertyOrder": 1006,
+                        "items": {
+                            "id": "http://localhost/restate/state-configurations/state/ignore-rules/trigger-name",
+                            "type": "string",
+                            "name": "TriggerName",
+                            "title": "Trigger",
+                            "headerTemplate": "{{ self }}"
+                        }
+                    },
+                    "onExit": {
+                        "id": "http://localhost/restate/state-configurations/state/on-exit",
+                        "type": "object",
+                        "name": "OnExit",
+                        "title": "On Exit",
+                        "$ref": "http://localhost/restate/code",
+                        "propertyOrder": 1007
+                    }
+                },
+                "required": [
+                    "stateName"
+                ]
+            }
         }
-      }
     }
-  }</value>
+}</value>
+  </data>
+  <data name="OnEntryFrom" xml:space="preserve">
+    <value>{
+    "$schema": "http://json-schema.org/draft-04/schema#",
+    "id": "http://localhost/restate/on-entry-from",
+    "type": "object",
+    "name": "OnEntryFromAction",
+    "default": null,
+    "format": "normal",
+    "options": {
+        "disable_edit_json": true
+    },
+    "additionalProperties": false,
+    "defaultProperties": [
+        "name",
+        "fromTrigger",
+        "connectorKey",
+        "body",
+        "description"
+    ],
+    "properties": {
+        "name": {
+            "id": "http://localhost/restate/on-entry-from/name",
+            "type": "string",
+            "name": "Name",
+            "title": "Name",
+            "default": null
+        },
+        "fromTrigger": {
+            "id": "http://localhost/restate/on-entry-from/from-trigger-name",
+            "type": "string",
+            "name": "FromTrigger",
+            "title": "From Trigger Name",
+            "default": null
+        },
+        "connectorKey": {
+            "id": "http://localhost/restate/on-entry-from/connector-key",
+            "type": "string",
+            "name": "ConnectorKey",
+            "title": "Connector Key",
+            "default": null
+        },
+        "body": {
+            "id": "http://localhost/restate/on-entry-from/body",
+            "type": "string",
+            "name": "Body",
+            "title": "Body",
+            "format": "code",
+            "options": {
+                "input_height": "100px",
+                "format": "text"
+            }
+        },
+        "options": {
+            "id": "http://localhost/restate/on-entry-from/options",
+            "type": "object",
+            "name": "Options",
+            "title": "Options",
+            "default": null
+        },
+        "description": {
+            "id": "http://localhost/restate/on-entry-from/description",
+            "type": "string",
+            "name": "Description",
+            "title": "Description",
+            "format": "textarea",
+            "default": null,
+            "options": {
+                "input_height": "100px"
+            }
+        }
+    },
+    "required": [
+        "name",
+        "connectorKey",
+        "body"
+    ]
+}</value>
   </data>
   <data name="State" xml:space="preserve">
     <value>{
@@ -188,14 +471,14 @@
       "id": "{host}/state/description",
       "type": "string",
       "name": "Description",
-      "title": "Description"
+      "title": "Description",
+      "format": "textarea"
     },
     "parentStateName": {
       "id": "{host}/state/parent-state-name",
       "type": "string",
       "name": "Parent State Name",
-      "title": "Parent State Name",
-      "format": "date"
+      "title": "Parent State Name"
     }
   },
   "required": [
