--- a/src/REstate.Web.Core/Schemas.resx
+++ b/src/REstate.Web.Core/Schemas.resx
@@ -120,10 +120,8 @@
   <data name="Code" xml:space="preserve">
     <value>{
     "$schema": "http://json-schema.org/draft-04/schema#",
-    "id": "http://localhost/restate/code",
+    "id": "{host}/code",
     "type": "object",
-    "name": "OnExitAction",
-    "title": "On Exit Action",
     "default": null,
     "format": "normal",
     "options": {
@@ -138,21 +136,21 @@
     ],
     "properties": {
         "name": {
-            "id": "http://localhost/restate/code/name",
+            "id": "{host}/code/name",
             "type": "string",
             "name": "Name",
             "title": "Name",
             "default": null
         },
         "connectorKey": {
-            "id": "http://localhost/restate/code/connector-key",
+            "id": "{host}/code/connector-key",
             "type": "string",
             "name": "ConnectorKey",
             "title": "Connector Key",
             "default": null
         },
         "body": {
-            "id": "http://localhost/restate/code/body",
+            "id": "{host}/code/body",
             "type": "string",
             "name": "Body",
             "title": "Body",
@@ -163,14 +161,14 @@
             }
         },
         "options": {
-            "id": "http://localhost/restate/code/options",
+            "id": "{host}/code/options",
             "type": "object",
             "name": "Options",
             "title": "Options",
             "default": null
         },
         "description": {
-            "id": "http://localhost/restate/code/description",
+            "id": "{host}/code/description",
             "type": "string",
             "name": "Description",
             "title": "Description",
@@ -191,7 +189,7 @@
   <data name="Machine" xml:space="preserve">
     <value>{
     "$schema": "http://json-schema.org/draft-04/schema#",
-    "id": "http://localhost/restate/machine",
+    "id": "{host}/machine",
     "type": "object",
     "name": "Machine",
     "title": "Machine Definition",
@@ -207,42 +205,40 @@
     },
     "properties": {
         "machineName": {
-            "id": "http://localhost/restate/machine/name",
+            "id": "{host}/machine/name",
             "type": "string",
             "name": "MachineName",
             "title": "Machine Name",
             "default": null
         },
         "initialState": {
-            "id": "http://localhost/restate/machine/initial-state",
+            "id": "{host}/machine/initial-state",
             "type": "string",
             "name": "InitialState",
             "title": "Initial State Name",
             "default": null
         },
         "autoIgnoreTriggers": {
-            "id": "http://localhost/restate/machine/auto-ignore-triggers",
+            "id": "{host}/machine/auto-ignore-triggers",
             "type": "boolean",
             "name": "AutoIgnoreTriggers",
             "title": "Auto ignore triggers not defined in a transition?",
             "default": false
         },
         "stateConfigurations": {
-            "id": "http://localhost/restate/machine/state-configurations",
+            "id": "{host}/machine/state-configurations",
             "type": "array",
             "title": "States",
             "items": {
-                "id": "http://localhost/restate/machine/state-configurations/state",
+                "id": "{host}/machine/state-configurations/state",
                 "type": "object",
                 "name": "State",
                 "title": "State",
                 "headerTemplate": "{{ self.stateName }}",
                 "minItems": 1,
-                "format": "grid",
                 "additionalProperties": false,
                 "defaultProperties": [
                     "stateName",
-                    "parentStateName",
                     "stateDescription",
                     "transitions"
                 ],
@@ -251,14 +247,14 @@
                 },
                 "properties": {
                     "stateName": {
-                        "id": "http://localhost/restate/state-configurations/state/name",
+                        "id": "{host}/state-configurations/state/name",
                         "type": "string",
                         "name": "Name",
                         "title": "Name",
                         "default": null
                     },
                     "parentStateName": {
-                        "id": "http://localhost/restate/state-configurations/state/parent-name",
+                        "id": "{host}/state-configurations/state/parent-name",
                         "type": "string",
                         "name": "ParentStateName",
                         "title": "Parent State Name",
@@ -266,7 +262,7 @@
                         "propertyOrder": 1001
                     },
                     "stateDescription": {
-                        "id": "http://localhost/restate/state-configurations/state/description",
+                        "id": "{host}/state-configurations/state/description",
                         "type": "string",
                         "name": "Description",
                         "title": "Description",
@@ -278,36 +274,36 @@
                         "propertyOrder": 1002
                     },
                     "onEntry": {
-                        "id": "http://localhost/restate/state-configurations/state/on-entry",
+                        "id": "{host}/state-configurations/state/on-entry",
                         "type": "object",
                         "name": "OnEntryAction",
                         "title": "On Entry",
-                        "$ref": "http://localhost/restate/code",
+                        "$ref": "{host}/code",
                         "propertyOrder": 1003
                     },
                     "onEntryFrom": {
-                        "id": "http://localhost/restate/state-configurations/state/on-entry-from-actions",
+                        "id": "{host}/state-configurations/state/on-entry-from-actions",
                         "type": "array",
                         "name": "OnEntryFromTriggers",
                         "title": "On Entry From Triggers",
                         "propertyOrder": 1004,
                         "items": {
-                            "id": "http://localhost/restate/state-configurations/state/on-entry-from-actions/on-entry-from",
+                            "id": "{host}/state-configurations/state/on-entry-from-actions/on-entry-from",
                             "type": "object",
                             "name": "OnEntryFrom",
                             "title": "On Entry From Trigger",
                             "headerTemplate": "On Entry From {{self.fromTrigger}}",
-                            "$ref": "http://localhost/restate/on-entry-from"
+                            "$ref": "{host}/on-entry-from"
                         }
                     },
                     "transitions": {
-                        "id": "http://localhost/restate/state-configurations/state/transitions",
+                        "id": "{host}/state-configurations/state/transitions",
                         "type": "array",
                         "name": "Transitions",
                         "title": "Transitions",
                         "propertyOrder": 1005,
                         "items": {
-                            "id": "http://localhost/restate/state-configurations/state/transitions/transition",
+                            "id": "{host}/state-configurations/state/transitions/transition",
                             "type": "object",
                             "name": "Transition",
                             "title": "Transition",
@@ -323,36 +319,36 @@
                             },
                             "properties": {
                                 "triggerName": {
-                                    "id": "http://localhost/restate/state-configurations/state/transitions/transition/trigger-name",
+                                    "id": "{host}/state-configurations/state/transitions/transition/trigger-name",
                                     "type": "string",
                                     "name": "TriggerName",
                                     "title": "Trigger Name"
                                 },
                                 "resultantStateName": {
-                                    "id": "http://localhost/restate/state-configurations/state/transitions/transition/resultant-state-name",
+                                    "id": "{host}/state-configurations/state/transitions/transition/resultant-state-name",
                                     "type": "string",
                                     "name": "ResultantStateName",
                                     "title": "Resultant State Name"
                                 },
                                 "guard": {
-                                    "id": "http://localhost/restate/state-configurations/state/transitions/transition/guard",
+                                    "id": "{host}/state-configurations/state/transitions/transition/guard",
                                     "type": "object",
                                     "name": "Guard",
                                     "title": "Guard",
-                                    "$ref": "http://localhost/restate/code",
+                                    "$ref": "{host}/code",
                                     "propertyOrder": 1002
                                 }
                             }
                         }
                     },
                     "ignoreRules": {
-                        "id": "http://localhost/restate/state-configurations/state/ignore-rules",
+                        "id": "{host}/state-configurations/state/ignore-rules",
                         "type": "array",
                         "name": "IgnoreRules",
                         "title": "Ignored Triggers",
                         "propertyOrder": 1006,
                         "items": {
-                            "id": "http://localhost/restate/state-configurations/state/ignore-rules/trigger-name",
+                            "id": "{host}/state-configurations/state/ignore-rules/trigger-name",
                             "type": "string",
                             "name": "TriggerName",
                             "title": "Trigger",
@@ -360,11 +356,11 @@
                         }
                     },
                     "onExit": {
-                        "id": "http://localhost/restate/state-configurations/state/on-exit",
+                        "id": "{host}/state-configurations/state/on-exit",
                         "type": "object",
                         "name": "OnExit",
                         "title": "On Exit",
-                        "$ref": "http://localhost/restate/code",
+                        "$ref": "{host}/code",
                         "propertyOrder": 1007
                     }
                 },
@@ -379,7 +375,7 @@
   <data name="OnEntryFrom" xml:space="preserve">
     <value>{
     "$schema": "http://json-schema.org/draft-04/schema#",
-    "id": "http://localhost/restate/on-entry-from",
+    "id": "{host}/on-entry-from",
     "type": "object",
     "name": "OnEntryFromAction",
     "default": null,
@@ -397,28 +393,28 @@
     ],
     "properties": {
         "name": {
-            "id": "http://localhost/restate/on-entry-from/name",
+            "id": "{host}/on-entry-from/name",
             "type": "string",
             "name": "Name",
             "title": "Name",
             "default": null
         },
         "fromTrigger": {
-            "id": "http://localhost/restate/on-entry-from/from-trigger-name",
+            "id": "{host}/on-entry-from/from-trigger-name",
             "type": "string",
             "name": "FromTrigger",
             "title": "From Trigger Name",
             "default": null
         },
         "connectorKey": {
-            "id": "http://localhost/restate/on-entry-from/connector-key",
+            "id": "{host}/on-entry-from/connector-key",
             "type": "string",
             "name": "ConnectorKey",
             "title": "Connector Key",
             "default": null
         },
         "body": {
-            "id": "http://localhost/restate/on-entry-from/body",
+            "id": "{host}/on-entry-from/body",
             "type": "string",
             "name": "Body",
             "title": "Body",
@@ -429,14 +425,14 @@
             }
         },
         "options": {
-            "id": "http://localhost/restate/on-entry-from/options",
+            "id": "{host}/on-entry-from/options",
             "type": "object",
             "name": "Options",
             "title": "Options",
             "default": null
         },
         "description": {
-            "id": "http://localhost/restate/on-entry-from/description",
+            "id": "{host}/on-entry-from/description",
             "type": "string",
             "name": "Description",
             "title": "Description",
